force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/PJN_CRM_Connection_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Connection settings for Patient Journey Navigator CRM integrations.</description>
    <label>CRM Connection Setting</label>
    <pluralLabel>CRM Connection Settings</pluralLabel>
</CustomObject>