force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this connection setting active?</description>
    <inlineHelpText>Is this connection setting active? If it&apos;s not active it will not run.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>