force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Case_Sync_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Sync_Complete_Status__c</fullName>
    <description>Status stamped when Cases are sent to PJN with a Completed status.</description>
    <inlineHelpText>Status stamped when Cases are sent to PJN with a Completed status.</inlineHelpText>
    <label>Case Sync Complete Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>