force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Case_to_CRM_Connection_Class__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_to_CRM_Connection_Class__c</fullName>
    <description>Class being used to connect to the CRM for Case Escalation integration.</description>
    <inlineHelpText>Class being used to connect to the CRM for Case Escalation integration.</inlineHelpText>
    <label>Case to CRM Connection Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>