force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Case_Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Trigger_Field__c</fullName>
    <description>Field that need to be true for the trigger to send an Case to the corresponding CRM.</description>
    <inlineHelpText>Field that need to be true for the trigger to send an Case to the corresponding CRM.</inlineHelpText>
    <label>Case Trigger Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>