force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_CRM_Connection_Class__c.field-meta.xml
<CustomField>
    <fullName>PJN_CRM_Connection_Class__c</fullName>
    <description>Class being used to connect to the CRM.</description>
    <inlineHelpText>Class being used to connect to the CRM.</inlineHelpText>
    <label>CRM Connection Class</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>