force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_CRM_to_Connection_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_CRM_to_Connection_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active for CRM to Connection</label>
    <type>Checkbox</type>
</CustomField>