force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_CRM_to_Connection_Class__c.field-meta.xml
<CustomField>
    <fullName>PJN_CRM_to_Connection_Class__c</fullName>
    <label>CRM to Connection Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>