force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Event_to_CRM_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_to_CRM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this connection setting active for Event to CRM?</description>
    <inlineHelpText>Is this connection setting active for Event to CRM? If it&apos;s not active it will not run.</inlineHelpText>
    <label>Active for Event to CRM</label>
    <type>Checkbox</type>
</CustomField>