force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>PJN_Named_Credential__c</fullName>
    <description>Named credential used to establish the connection to the external CRM.</description>
    <label>Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>