force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Trigger_Field__c</fullName>
    <description>The field that needs to be true for the trigger to perform transactions with the corresponding CRM.</description>
    <inlineHelpText>The field that needs to be true for the trigger to perform transactions with the corresponding CRM.</inlineHelpText>
    <label>Trigger Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>