force-app/main/default/src/objects/PJN_CRM_Connection_Setting__mdt/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <description>Does this connection apply to Case Escalation, Enrollments, or Case Sync transactions?</description>
    <inlineHelpText>Does this connection apply to Case Escalation, Enrollments, or Case Sync transactions?</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Escalation</fullName>
                <default>true</default>
                <label>Case Escalation</label>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>